Create authentication with google
Signed-off-by: yash2002109 <yash2002109@gmail.com>

--- a/src/components/pages/Authentication/Authentication.module.css
+++ b/src/components/pages/Authentication/Authentication.module.css
@@ -1,6 +1,10 @@
-.auth-section {
+.auth_section {
     display: flex;
     justify-content: center;
     align-items: flex-end;
     margin-top: 40vh;
+}
+
+.authenticateButton{
+    width: 30vw;
 }
