--- a/src/components/pages/Register/Registeration.module.css
+++ b/src/components/pages/Register/Registeration.module.css
@@ -1,6 +1,7 @@
 
 .section {
-  padding-top: 26vh;
+  padding-top: clamp(220px, 26vh, 100px);
+  
   display: flex;
   align-items: center;
   justify-content: center;
