--- a/src/components/pages/Dashboard/Dashboard.module.css
+++ b/src/components/pages/Dashboard/Dashboard.module.css
@@ -1,107 +1,70 @@
 .container {
-    background-color: white;
-    
+  background-color: white;
 }
 
+.section_accessible {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  justify-content: center;
+  margin-bottom: 7vh;
+}
+.section_accessible h1 {
+  text-align: center;
+  /* padding-bottom: -10px; */
+  text-transform: uppercase;
+  /* font-size: 26px; */
+  letter-spacing: 1px;
 
-/* Sidenav */
-
-.sidenav {
-    background-color: #fff;
-    color: #333;
-    border-bottom-right-radius: 25px;
-    height: 100%;
-    left: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-    position: absolute;
-    top: 70px;
-    width: 250px;
 }
 
-.profile {
-    margin-bottom: 20px;
-    margin-top: -12px;
-    text-align: center;
-}
-
-.profile img {
-    border-radius: 50%;
-    box-shadow: 0px 0px 5px 1px grey;
-}
-
-.name {
-    font-size: 20px;
-    font-weight: bold;
-    padding-top: 20px;
-}
-
-.job {
-    font-size: 16px;
-    font-weight: bold;
-    padding-top: 10px;
-}
-
-.url, hr {
-    text-align: center;
-}
-
-.url hr {
-    margin-left: 20%;
-    width: 60%;
-}
-
-.url a {
-    color: #818181;
-    display: block;
-    font-size: 20px;
-    margin: 10px 0;
-    padding: 6px 8px;
-    text-decoration: none;
-}
-
-.url a:hover, .url .active {
-    background-color: #e8f5ff;
-    border-radius: 28px;
-    color: #000;
-    margin-left: 14%;
-    width: 65%;
-}
 
 .main {
-    margin-top: 2%;
-    margin-left: 29%;
-    font-size: 28px;
-    padding: 0 10px;
-    width: 58%;
+  /* margin-top: 2%;
+  margin-left: 29%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 28px;
+  padding: 0 10px;
+  width: 100vw;
 }
 
 .main h2 {
-    /* color: #333; */
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 24px;
-    margin-bottom: 10px;
+  /* color: #333; */
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
 .main .card {
-    background-color: #fff;
-    border-radius: 18px;
-    box-shadow: 1px 1px 8px 0 grey;
-    height: auto;
-    margin-bottom: 20px;
-    padding: 20px 0 20px 50px;
+  background-color: #fff;
+  display: flex;
+  width: 60vw;
+  flex-direction: column;
+  border-radius: 18px;
+  box-shadow: 1px 1px 8px 0 grey;
+  height: auto;
+  margin-bottom: 20px;
+  padding: 1vw;
+}
+@media only screen and (max-width: 600px) {
+  .main .card {
+    width: auto;
+  }
 }
 
 .main .card table {
-    border: none;
-    font-size: 16px;
-    height: 270px;
-    width: 80%;
+  border: none;
+  font-size: 16px;
+  height: 270px;
+  width: 80%;
 }
 
 .edit {
-    position: absolute;
-    color: #e7e7e8;
-    right: 14%;
+  position: absolute;
+  color: #e7e7e8;
+  right: 14%;
 }
