Fix layout for dashboard
Signed-off-by: yash2002109 <yash2002109@gmail.com>

--- a/src/components/pages/Dashboard/Dashboard.module.css
+++ b/src/components/pages/Dashboard/Dashboard.module.css
@@ -15,9 +15,13 @@
   text-transform: uppercase;
   /* font-size: 26px; */
   letter-spacing: 1px;
+  margin: 5px;
 
 }
 
+.section_accessible a {
+  color: #27094B;
+}
 
 .main {
   /* margin-top: 2%;
