--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -1,3 +1,22 @@
 .landing_page {
   background-color: #1b083d;
+  overflow-x: hidden;
+}
+
+.login_button{
+  display: flex;
+  justify-content: center;
+
+}
+@media screen and (max-width: 600px) {
+
+  .login_button {
+    width: 100vw;
+  }
+  .login_button button {
+    width: 100vw;
+  }
+
+
+
 }
