--- a/src/components/pages/LandingPage/Section/Section.module.css
+++ b/src/components/pages/LandingPage/Section/Section.module.css
@@ -65,10 +65,11 @@
 }
 
 .section_image {
-  padding-left: 5vw;
+  padding-left: 3vw;
   height: 100%;
-  width: 100%;
-  /* max-width: 30vw; */
+  object-fit: contain;
+  /* width: 100%; */
+  width: 40vw;
 }
 
 .section_title {
@@ -106,7 +107,7 @@
   display: flex;
   position: absolute;
   left: 0.5vw;
-  bottom: -10vh;
+  bottom: -5vh;
   font-family: Nunito Sans;
   font-style: normal;
   font-weight: bold;
