--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -16,20 +16,20 @@
   font-size: 40px;
 }
 .facebook {
-  padding: 20px;
-  /* margin: 20px; */
+  padding: 10px;
+  margin: 10px;
 }
 .instagram {
-  padding: 20px;
-  /* margin: 20px; */
+  padding: 10px;
+  margin: 10px;
 }
 .youtube {
-  padding: 20px;
-  /* margin: 20px; */
+  padding: 10px;
+  margin: 10px;
 }
 .linkedin {
-  padding: 20px;
-  /* margin: 20px; */
+  padding: 10px;
+  margin: 10px;
 }
 
 .footer {
@@ -77,8 +77,30 @@
   color: #fcc907;
   padding: 1rem 0;
   align-content: center;
-}
 
+}
+.sub-footer h6 {
+  /* margin: 20px; */
+  left: 30%;
+  font-size: 1.2em;
+  position: absolute;
+}
+.sub-footer h5 {
+  font-size: 1.2em;
+  right: 30%;
+  position: absolute;
+}
+.sub-footer .phone1 {
+  position: absolute;
+  margin-top: 30px;
+  left: 30%
+}
+.sub-footer .phone2 {
+  position: absolute;
+  /* top: 100%; */
+  margin-top: 30px;
+  right: 31%
+}
 .tab {
   display: inline-block;
   margin-left: 30vw;
@@ -90,6 +112,7 @@
   border-left: 2px solid #FCC907;
   border-right: 2px solid #FCC907;
   padding: 40px;
+  margin-top: 50px;
 }
 
 .powered {
@@ -109,14 +132,14 @@
   }
   .image {
     height: 200px;
-    width: 200px;
+    width: 250px;
     border-left: none;
     border-right: none;
     border-top: 2px solid hsl(48, 98%, 51%);
-  border-bottom: 2px solid #FCC907;
+    border-bottom: 2px solid #FCC907;
     padding: 30px;
-    margin-top: 60px;
-    /* margin-right: 20px; */
+    margin-top: 100px;
+    margin-right: -140px;
   }
   .footer section2 {
     display: flex;
@@ -136,11 +159,31 @@
     padding: 30px;
     font-size: 1em;
   }
+  .sub-footer h6 {
+    left: 13%;
+    font-size: 1.2em;
+    position: absolute;
+  }
+  .sub-footer h5 {
+    font-size: 1.2em;
+    right: 12%;
+    position: absolute;
+  }
+  .sub-footer .phone1 {
+    position: absolute;
+    margin-top: 30px;
+    left: 12%
+  }
+  .sub-footer .phone2 {
+    position: absolute;
+    margin-top: 30px;
+    right: 15%
+  }
   .footer section5 {
   }
   .footer section5 h3{
     /* padding: 20px; */
-    margin-top: -100px;
+    margin-top: -60px;
     left: 40%;
     position: absolute;
     /* margin: auto; */
