--- a/src/components/HeaderFAQ.css
+++ b/src/components/HeaderFAQ.css
@@ -8,6 +8,7 @@ header {
 header h1 {
   color: #eee;
   font-size: 28px;
+  text-align: center;
   font-weight: 700;
   text-transform: uppercase;
 }
