--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,7 +7,7 @@
   font-size: 1.2rem;
   position: sticky;
   top: 0;
-  box-shadow: 0px 4px 25px 0px #0E001FB2;
+  
   z-index: 999;
 }
 
@@ -19,10 +19,11 @@
   width: 100vw;
   max-width: 1500px;
   /* padding-left: 15vw; */
-  
   overflow-x: hidden;
 }
-
+.add-shadow {
+  box-shadow: 0px 4px 25px 0px #0E001FB2;
+}
 .navbar-logo {
   color: rgb(243, 243, 243);
   justify-self: start;
@@ -78,7 +79,10 @@
   color: #FCC907;
   transition: all 0.2s ease-out;
 }
-
+.nav-links:focus {
+  color: #FCC907;
+  transition: all 0.2s ease-out;
+}
 .fa-bars {
   color: rgb(44, 44, 44);
 }
@@ -159,7 +163,7 @@
   }
   .img{
     margin-right:75vw;
-    margin-left: 2vw;
+    margin-left: 6vw;
   }
 
   .fa-bars {
