--- a/src/components/pages/LandingPage/Section/Button/Button.module.css
+++ b/src/components/pages/LandingPage/Section/Button/Button.module.css
@@ -12,7 +12,11 @@
   justify-content: center;
   align-items: center;
   padding: 16px 48px;
+  font-family: Marcellus;
+  font-weight: 600;
   border-radius: 4px;
+  border: none;
+  outline: none;
 }
 
 .glow_button:hover {
