--- a/src/components/pages/Team/SponsorSection/SponsorSection.module.css
+++ b/src/components/pages/Team/SponsorSection/SponsorSection.module.css
@@ -5,7 +5,7 @@
   position: relative;
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: Nunito Sans;
   font-weight: 300;
   font-size: 40px;
   color:#FCC907;
@@ -16,6 +16,7 @@
   font-weight: 800;
   letter-spacing: 0;
   line-height: 1.5em;
+  margin-top: 20px;
   padding-bottom: 15px;
   position: relative;
 }
@@ -31,10 +32,20 @@
 .cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  padding-left: 10px;
+  justify-content: flex-start;
+  padding-left: 20px;
 }
-
+.mssg {
+  margin-top: 20px;
+}
+h2 {
+  color: #FCC907;
+  font-family: Marcellus;
+  font-size: 1.4em;
+  margin-top: 20px;
+  margin: 20px;
+  text-align: center;
+}
 .sponsor_title h1:after {
   content: "";
   position: absolute;
