--- a/src/components/pages/Team/Sponsors.module.css
+++ b/src/components/pages/Team/Sponsors.module.css
@@ -30,7 +30,9 @@
 .sidebar a:hover {
   color: #FCC907;
 }
-
+.sidebar a:focus {
+  color: #FCC907;
+}
 .main {
   margin-left: calc(210px + 10vw); /* Same as the width of the sidenav */
   font-size: 1.2em;
@@ -66,6 +68,7 @@
     list-style: none;
     border-right: none;
     border-bottom: 2px solid #FCC907;
+    display: none;
   }
 
   .sidebar a {
