--- a/src/components/pages/Sponsors/SponsorSection/SponsorSection.module.css
+++ b/src/components/pages/Sponsors/SponsorSection/SponsorSection.module.css
@@ -8,7 +8,7 @@
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   font-size: 40px;
-  color: #080808;
+  color: #fff;
   -webkit-transition: all 0.4s ease 0s;
   -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
@@ -26,7 +26,7 @@
   bottom: 0;
   height: 5px;
   width: 55px;
-  background-color: #111;
+  background-color: #FCC907;
 }
 .sponsor_title h1:after {
   content: "";
@@ -36,5 +36,5 @@
   height: 1px;
   width: 150%;
   max-width: 255px;
-  background-color: #333;
+  background-color: #FCC907;
 }
