--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,7 +7,6 @@
   font-size: 1.2rem;
   position: sticky;
   top: 0;
-  
   z-index: 999;
 }
 
@@ -19,7 +18,7 @@
   width: 100vw;
   max-width: 1500px;
   /* padding-left: 15vw; */
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .add-shadow {
   box-shadow: 0px 4px 25px 0px #0E001FB2;
@@ -69,8 +68,8 @@
   height: 100%;
   font-family: Nunito Sans;
   font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 18px;
   line-height: 25px;
   margin-right: 10px;
 }
