--- a/src/components/pages/Events/events.css
+++ b/src/components/pages/Events/events.css
@@ -1,5 +1,6 @@
 body {
-  background: #1D033E;  
+  background: #1D033E;
+  font-family: Marcellus;  
 }
 .tabs {
   color: #fff;
@@ -217,9 +218,14 @@ text-transform: capitalize;
 }
 #modal-modal-title {
   color: #fff;
+  font-family: Marcellus;
+  border-bottom: 2px solid #FCC907;
+  padding-bottom: 20px;
 }
 #modal-modal-description {
   color:#FCC907;
+  font-family: Marcellus;
+  border-bottom: 2px solid #FCC907;
 }
 .table {
   background: #27094B;
@@ -250,6 +256,38 @@ text-transform: capitalize;
 .btns {
   padding: 10px;
 }
+.payment-modal {
+  display: none;
+  font-family: Marcellus;
+  border: 2px solid #FCC907;
+}
+#modal-modal-description ul li {
+  display: flex;
+  padding: 20px;
+}
+#modal-modal-description ul li span {
+  color: #fff;
+  font-family: Marcellus;
+  font-size: 1.4em;
+}
+#modal-modal-description  h3 {
+  font-family: Marcellus;
+  font-size: 1.4em;
+  margin-top: 3px;
+  padding-left: 20px;
+}
+#modal-modal-description p {
+  font-family: Marcellus;
+  font-size: 1.4em;
+  padding-left: 20px;
+}
+#modal-modal-description a {
+  font-family: Marcellus;
+  font-size: 1.4em;
+  text-decoration: none;
+  padding: 20px;
+  color: #fff;
+} 
 @media screen and (max-width: 786px) {
   .event-cards {
     flex-wrap: wrap;
@@ -364,4 +402,30 @@ text-transform: capitalize;
    .trash-btn {
      display: none;
    }
+   #modal-modal-description ul li {
+    display: flex;
+    padding: 0px;
+  }
+  #modal-modal-description ul li span {
+    color: #fff;
+    font-family: Marcellus;
+    padding-right: 5px;
+    font-size: 0.8em;
+  }
+  #modal-modal-description  h3 {
+    font-family: Marcellus;
+    font-size: 0.9em;
+    padding-left: 4px;
+    margin-top: 3px;
+  }
+  #modal-modal-description p {
+    font-family: Marcellus;
+    font-size: 0.8em;
+  }
+  #modal-modal-description a {
+    font-family: Marcellus;
+    font-size: 1.0em;
+    text-decoration: none;
+    color: #fff;
+  } 
 }
