--- a/src/components/pages/LandingPage/Banner/Banner.module.css
+++ b/src/components/pages/LandingPage/Banner/Banner.module.css
@@ -1,12 +1,8 @@
 .banner {
-  padding-top: 8vh;
-  /* margin-bottom: 8vh; */
-  padding-bottom: 8vh;
-  /* width: 100vw; */
+
 }
 
 .image {
-    width: 100vw;
-    max-height: 80vh;
-    object-fit: cover;
+    width: 100%;
+    max-height: 110vh;
 }
