--- a/src/components/pages/Merchandise/Merchandise.css
+++ b/src/components/pages/Merchandise/Merchandise.css
@@ -58,7 +58,7 @@
     margin-right: 100px;
     padding: 30px;
     color: #FCC907;
-    width: 60vw;
+    width: 100%;
     font-size: 1.2em;
     padding-left: 60px;
 }
@@ -95,12 +95,13 @@
       color: #FCC907;
       width: 100%;
       font-size: 1.2em;
-      padding-left: 60px;
+      padding-left: 40px;
   }
   .terms ul li{
     margin-right: 100px;
     padding: 20px;
     padding-left: 20px;
+    width: 100%;
     list-style: disc;
     font-family: Marcellus;
     color: #FCC907;
