--- a/src/components/pages/Sponsors/Sponsors.module.css
+++ b/src/components/pages/Sponsors/Sponsors.module.css
@@ -1,6 +1,6 @@
 .sidebar {
   height: 100%;
-  width: calc(200px + 10vw);
+  width: calc(250px + 10vw);
   /* min-width: 200px; */
   position: fixed;
   top: 20;
@@ -10,16 +10,17 @@
   padding-top: 20px;
   text-align: left;
   line-height: 1.5;
-  font-size: 1em;
+  font-size: 1.2em;
+  font-family: Marcellus;
   border-right: 2px solid #FCC907;
   scrollbar-color: #FCC907;
 }
 .sidebar h1 {
   font-size: 1.6em;
-  font-family: Nunito Sans;
+  font-family: Marcellus;
 }
 .sidebar a {
-  padding: 35px;
+  padding: 30px;
   text-decoration: none;
   color: #fff;
   display: block;
