--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -103,7 +103,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: auto;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -178,7 +178,7 @@
     font-size: 1.5rem;
     background-color: transparent;
     color: #fff;
-    padding: 14px 20px;
+    padding: 20px;
     border: 1px solid #fff;
     transition: all 0.3s ease-out;
   }
