--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -18,6 +18,9 @@ font-size: 18px;
     background-color: var(--primary);
     color: #242424;
     border: 1px solid var(--primary);
+    position: absolute;
+    top: 16px;
+    right: 20px;
   }
   
   .btn--outline {
