--- a/src/components/pages/Team/SponsorSection/Card.css
+++ b/src/components/pages/Team/SponsorSection/Card.css
@@ -5,13 +5,10 @@
   text-align: center;
   justify-content: center;
   padding-left: calc(vw);
-  /* align-items: center; */
-  
-
 }
+
 .position {
   margin-top: 10px;
-  font-size: 1.2em;
 }
 .team-card {
   /* width: 33vw; */
@@ -41,7 +38,7 @@
 }
 .team-card h3 {
   font-family: Marcellus;
-  font-size: 1.2em;
+  font-size: 1.0em;
 }
 /* Add rounded corners to the top left and the top right corner of the image */
 /* Add some padding inside the card container */
@@ -57,6 +54,18 @@
   width: 100%;
   overflow: hidden;
   transition: all .5s ease;
+}
+.cardTitle {
+  margin: 0 auto;
+  color: #fff;
+  font-family: Marcellus;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  margin-top: 10px;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: center;
 }
 .cardImg img {}
 .cardImg img:hover {
