--- a/src/components/pages/Team/Sponsors.module.css
+++ b/src/components/pages/Team/Sponsors.module.css
@@ -1,6 +1,6 @@
 .sidebar {
   height: 100%;
-  width: calc(200px + 10vw);
+  width: calc(150px + 10vw);
   /* min-width: 200px; */
   position: fixed;
   top: 20;
@@ -16,7 +16,7 @@
   scrollbar-color: #FCC907;
 }
 .sidebar h1 {
-  font-size: 1.6em;
+  font-size: 1.2em;
   font-family: Nunito Sans;
 }
 .sidebar a {
@@ -26,11 +26,10 @@
   display: block;
   list-style: none;
 }
-
-.sidebar a:hover {
+.sidebar .target {
   color: #FCC907;
 }
-.sidebar a:focus {
+.sidebar a:hover {
   color: #FCC907;
 }
 .main {
