--- a/src/components/pages/Events/events.css
+++ b/src/components/pages/Events/events.css
@@ -1,6 +1,11 @@
 body {
+  font-family: Marcellus;
+  
+  background-color: #1D033E;
+  
+}
+.event_page {
   background: #1D033E;
-  font-family: Marcellus;  
 }
 .tabs {
   color: #fff;
@@ -10,28 +15,28 @@ body {
   position: relative;
 }
 .card-container {
-  padding: 20px;
-  width: 79vw;
+  width: 70vw;
   position: relative;
-  /* overflow: hidden; */
 }
-.event-card,
-.workshop-card {
-  margin-right: 50px;
-  margin-top: 40px;
-  width: 65vw;
-  height: 450px;
+.card-div {
+  /* margin-right: 20px; */
+}
+.card {
+  margin-right: 126px;
+  margin-top: 50px;
+  width: 100vw;
+  height: 440px;
   transition-duration: 300ms;
   transition-property: transform;
   transition-timing-function: ease-out;
   transform: rotate3d(90);
-  border-radius: 5px;
+  border-radius: 10px;
   /* padding: 20px; */
   background: #27094B;
-text-align: center;
-  box-shadow: 0px 24px 48px 0px #0000005C;
+  text-align: center;
+  box-shadow: 0px 24px 48px 0px #0000005c;
 }
-.event-card:hover {
+.card:hover {
   transition-duration: 150ms;
   box-shadow: 0px 12px 24px 0px #00000029;
   transition: all 0.4s ease;
@@ -42,34 +47,38 @@ text-align: center;
 }
 
 .separator .line{
-  height: 1px;
-  flex: 1;
-  margin: 10px;
+  height: 0.5px;
+  margin-top: 20px;
+  flex: 2;
+  margin: 4px;
   background-color: #FCC907;
 }
 
 .separator h2{
-  font-family: Marcellus;
-  font-size: 1.2em;
+  font-family: Nunito Sans;
+  font-size: 1.0em;
   font-style: normal;
   font-weight: 400;
   color: #FCC907;
   line-height: 20px;
+  text-transform: uppercase;
   letter-spacing: 0em;
   margin-top: 20px;
 }
 .card-img {
-  object-fit: cover;
+  /* object-fit: cover; */
   position: relative;
-  height: 220px;
+  height: 240px;
   width: 100%;
-  background-color: #000;
 }
 .event-cards {
  display: flex;
  /* float: left; */
+ margin: 0 auto;
  justify-content: space-between;
  width: 80vw;
+ padding-right: 40px;
+ padding-left: 40px;
 }
 .all-events {
   display: flex;
@@ -98,17 +107,19 @@ width: 80vw;
   text-decoration: none;
 }
 .btn1 {
-  font-family: Marcellus;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.0em;
-  line-height: 20px;
   color:#FCC907;
   margin: 0 auto;
   text-align: center;
   position: relative;
-  text-transform: uppercase;
-  text-decoration: none;
+  text-decoration: underline;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: center;
+
 }
 .btn1:hover {
   color: #fff
@@ -130,8 +141,16 @@ width: 80vw;
   text-align: center;
 }
 .event-card .prizes {
-  /* margin-top: -0.5px; */
+  font-family: Nunito Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: center;
 }
+
+
 .MuiSlider-root {
   color: #FCC907;
 }
@@ -148,10 +167,11 @@ width: 80vw;
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0em;
-  padding: 20px;
+  padding: 15px;
   align-items: flex-start;
   text-align: left;
   position: relative;
+  padding-left: 40px;
   color: #F9F4F5;
   text-transform: capitalize;
 }
@@ -164,6 +184,15 @@ width: 80vw;
 #vertical-tab-6:active {
   color: #FCC907;
   border-right: none;
+}
+#vertical-tab-0[aria-selected="true"],
+#vertical-tab-1[aria-selected="true"],
+#vertical-tab-2[aria-selected="true"],
+#vertical-tab-3[aria-selected="true"],
+#vertical-tab-4[aria-selected="true"],
+#vertical-tab-5[aria-selected="true"],
+#vertical-tab-6[aria-selected="true"] {
+  color: #FCC907;
 }
 .MuiTabs-indicator {
   width: 0px;
@@ -187,22 +216,22 @@ width: 80vw;
   display: none;
 }
 .cart-btn {
-  width: auto;
-  height: 40px;
-  position: relative;
+  width: 90px;
+  height: 35px;
+  position: absolute;
   margin: auto;
+  border-radius: 40px;
+  right: 18px;
   text-align: center;
-  margin-top: 15px;
+  margin-top: 25px;
   padding: 5px;
-  background: transparent;
+  background: #fcc907;
   border: 1px solid #FCC907;
-  color: #FCC907;
   font-weight: 700;
 }
 .cart-btn:hover {
-  background: #FCC907;
-  color:#27094B;
-  transition: all 0.6s ease-in-out;
+  /* border-color:#fcc907; */
+  box-shadow: 0px 0px 24px 0px rgba(255, 212, 48, 0.7);
 }
 .fees {
   color: #FCC907;
@@ -323,6 +352,8 @@ width: 80vw;
   }
   .event-card {
     /* width: 0vw; */
+    
+  margin-right: 0px;
     flex-wrap: wrap;
   }
   .workshop-cards {
@@ -362,6 +393,12 @@ width: 80vw;
      line-height: 20px;
      color:#FCC907;
    }
+   .cart-btn {
+    width: 90px;
+    height: 35px;
+    position: absolute;
+    right: 30px;
+  }
    .mobile ul {
      color: #fff;
      padding: 20px;
