--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -2,7 +2,12 @@
   background-color: #1b083d;
   overflow-x: hidden;
 }
-
+body {
+  
+  max-width: 1280px;
+  margin: 0 auto !important;
+  float: none !important;
+}
 .login_button{
   display: flex;
   justify-content: center;
