--- a/src/components/pages/Team/SponsorSection/Card.css
+++ b/src/components/pages/Team/SponsorSection/Card.css
@@ -1,10 +1,9 @@
 .parent_wrapper {
 
-  width: 50%;
+  width: 100%;
   display: flex;
   text-align: center;
   justify-content: center;
-  padding-left: calc(vw);
 }
 
 .position {
@@ -12,16 +11,16 @@
 }
 .team-card {
   /* width: 33vw; */
-  width: calc(100px +10vw);
-  max-width: 250px;
+  /* width: calc(100px +10vw); */
+  width: 220px;
   /* mix-blend-mode: multiply; merges image with the page background */
 
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  height: 300px;
+  height: 270px;
   transition: 0.3s;
   border-radius: 5px;
   /* flex: 1 0 500px; */
-  flex: 2 2 auto;
+  flex: 2 2 2;
   box-sizing: border-box;
   /* margin: 1rem 0.25em; */
   margin: 20px;
@@ -50,7 +49,7 @@
 .cardImg {
   object-fit: cover;
   position: relative;
-  height: 220px;
+  height: 180px;
   width: 100%;
   overflow: hidden;
   transition: all .5s ease;
