--- a/src/components/pages/Team/Sponsors.module.css
+++ b/src/components/pages/Team/Sponsors.module.css
@@ -1,10 +1,16 @@
+.wrapper {
+  background-color: #1b083d;
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+}
 .sidebar {
   height: 100%;
-  width: calc(150px + 10vw);
+  width: calc(180px + 10vw);
   /* min-width: 200px; */
   position: fixed;
   top: 20;
-  left: 0;
+  left: 100px;
   background: transparent;
   overflow-x: hidden;
   padding-top: 20px;
@@ -23,6 +29,7 @@
   padding: 15px;
   text-decoration: none;
   color: #fff;
+  font-family: Nunito Sans;
   display: block;
   list-style: none;
 }
