--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -42,27 +42,38 @@
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(5, auto);
-  grid-gap: 10px;
+  grid-template-columns: repeat(8, auto);
+  grid-gap: 4px;
   list-style: none;
   text-align: center;
   width: 80vw;
-  justify-content: end;
-  margin-right: 2rem;
+  justify-content: center;
+  margin-right: -15rem;
 }
-
+.cartBtn {
+  position: absolute;
+  top: 25px;
+  margin-left: 100px;
+  color: #FCC907;
+  background: transparent;
+  font-size: 1.4em;
+  outline: none;
+  border: none;
+}
 .nav-item {
   height: 80px;
+  margin-right: -20px;
 }
-.img{
-  height: 120px;
-  width: 130px;
-  top: -15px;
+.img {
+  height: 80px;
+  width: 100px;
+  top: -3px;
   color: #020202;
-  left: 2px;
+  left: 20px;
   position: absolute;
 }
-
+  .img:hover {
+  }
 .nav-links {
   color: rgb(255, 255, 255);
   display: flex;
@@ -105,7 +116,11 @@
   .NavbarItems {
     position: relative;
   }
-
+  .img {
+    height: 80px;
+    width: 80px;
+    top: 3px;
+  }
   .nav-menu {
     display: flex;
     flex-direction: column;
@@ -165,13 +180,6 @@
   .fa-times {
     color: rgb(255, 255, 255);
     font-size: 2rem;
-  }
-  .img{
-    margin-right:75vw;
-    margin-left: 6vw;
-  }
-  .img:hover {
-    box-shadow: 0px 0px 24px 0px rgba(255, 212, 48, 0.7);
   }
   .fa-bars {
     color: rgb(255, 255, 255);
